--- a/index.html
+++ b/index.html
@@ -63,16 +63,15 @@ function check(){
 let p = document.getElementById("pass").value;
 
 if(p === "boomi"){
-window.location.href="index.html";
+window.location.href="home.html";
 }else{
 document.getElementById("msg").innerHTML="Wrong Password!";
 }
 }
 </script>
 
-<a href="home.html">Enter</a>
-
 
 </body>
 </html>
+
 
