--- a/gallery.html
+++ b/gallery.html
@@ -12,6 +12,7 @@
 
 
 <h1 class="title">CONFIDENT AH IRUNGA VETRI NITCHAYAM</h1>
+<p class="subtitle">எனக்கு சேர வேண்டிய எல்லா நல்லதையும் நீயே எடுத்துக்கோ,உனக்கு சேர வேண்டிய எல்லா கெட்டதும் எனக்கே மட்டுமே வரட்டும்.</p>
 <p class="subtitle">NEVER FORGET TO LAUGH</p>
 
 <div class="gallery">
@@ -75,3 +76,4 @@ function enableMusic(){
 
 </body>
 </html>
+
